@@ -1,3 +1,8 @@
+2008-04-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/35741
+	* g++.dg/other/offsetof5.C: New test.
+
 2008-04-02  Andrew Pinski  <pinskia@gmail.com>
 
 	PR middle-end/35429
